# jubjub

./: CHANGELOG.md  Cargo.toml  README.md  RELEASES.md  rust-toolchain.toml
.github/workflows/: ci.yml  dusk_ci.yml
benches/: fq_bench.rs  fr_bench.rs  point_bench.rs
src/: dusk.rs  elgamal.rs  fq.rs  fr.rs  lib.rs
src/fr/: dusk.rs
tests/: common.rs  fq_blackbox.rs  fr_blackbox.rs
