[package]
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Eirik Ogilvie-Wigley <eowigley@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
]
description = "Implementation of the Jubjub elliptic curve group"
documentation = "https://docs.rs/jubjub/"
homepage = "https://github.com/zkcrypto/jubjub"
license = "MIT/Apache-2.0"
name = "jubjub"
repository = "https://github.com/zkcrypto/jubjub"
version = "0.10.0"
edition = "2021"

[dependencies.arbitrary]
version = "1.3"
features = ["derive"]
optional = true

[dependencies.bitvec]
version = "1"
default-features = false

[dependencies.bls12_381]
# upstreamed in https://github.com/zkcrypto/bls12_381/pull/138
git = "https://github.com/heliaxdev/bls12_381.git"
rev = "d96b104d0dc035af160fd6505e967cb37a553320"
default-features = false

[dependencies.ff]
version = "0.13"
default-features = false

[dependencies.group]
version = "0.13"
default-features = false

[dependencies.rand_core]
version = "0.6"
default-features = false

[dependencies.subtle]
version = "^2.2.1"
default-features = false

[dev-dependencies]
criterion = "0.3"
csv = ">= 1.0, < 1.2" # csv 1.2 has MSRV 1.60

[dev-dependencies.rand_xorshift]
version = "0.3"
default-features = false

[features]
default = ["alloc", "bits"]
alloc = ["ff/alloc", "group/alloc"]
bits = ["ff/bits"]
arbitrary = ["dep:arbitrary", "bls12_381/arbitrary"]

[[bench]]
name = "fq_bench"
harness = false

[[bench]]
name = "fr_bench"
harness = false

[[bench]]
name = "point_bench"
harness = false
