[package]
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Eirik Ogilvie-Wigley <eowigley@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
]
description = "Implementation of the Jubjub elliptic curve group"
documentation = "https://docs.rs/jubjub/"
homepage = "https://github.com/zkcrypto/jubjub"
license = "MIT/Apache-2.0"
name = "jubjub"
repository = "https://github.com/zkcrypto/jubjub"
version = "0.10.0"
edition = "2021"
rust-version = "1.63"

[dependencies]
bitvec = { version = "1", default-features = false }
bls12_381 = { version = "0.8", default-features = false }
ff = { version = "=0.14.0-pre.0", default-features = false }
group = { version = "=0.14.0-pre.0", default-features = false }
rand_core = { version = "0.9", default-features = false }
subtle = { version = "^2.2.1", default-features = false }

[dev-dependencies]
criterion = "0.3"
csv = ">= 1.0, < 1.2" # csv 1.2 has MSRV 1.60
rand_xorshift = { version = "0.4", default-features = false }

[features]
default = ["alloc", "bits"]
alloc = ["ff/alloc", "group/alloc"]
bits = ["ff/bits"]

[[bench]]
name = "fq_bench"
harness = false

[[bench]]
name = "fr_bench"
harness = false

[[bench]]
name = "point_bench"
harness = false

[patch.crates-io]
bls12_381 = { git = "https://github.com/zkcrypto/bls12_381.git", rev = "b859693951a28bb2e44515adbf54395aa8ec7a9a" }
group = { git = "https://github.com/zkcrypto/group.git", rev = "21104854da7f316c470213ab4a2ace239d24dd28" }
